--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           BASE_PATH: '/schoolingerscat-gp'
         run: |
-          npm run build
+          NODE_OPTIONS=--max-old-space-size=4000  && npm run build
           touch build/.nojekyll
 
       - name: Upload Artifacts
