--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
 	"dependencies": {
 		"@types/katex": "^0.16.2",
 		"@types/lodash": "^4.14.196",
+		"@types/node": "^20.4.5",
 		"@types/three": "^0.154.0",
 		"eventemitter3": "^5.0.1",
 		"fast-xml-parser": "^4.2.7",
 		"katex": "^0.16.8",
 		"lodash": "^4.17.21",
 		"mathjs": "^11.9.1",
+		"pixi.js": "^7.2.4",
 		"three": "^0.154.0"
 	}
 }
