--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"uninstall": "^0.0.0",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
+		"@popperjs/core": "^2.11.8",
 		"@types/katex": "^0.16.2",
 		"@types/lodash": "^4.14.196",
 		"@types/three": "^0.154.0",
+		"bootstrap": "^5.3.1",
 		"eventemitter3": "^5.0.1",
 		"fast-xml-parser": "^4.2.7",
 		"katex": "^0.16.8",
