--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/lodash": "^4.14.196",
 		"@types/three": "^0.154.0",
 		"bootstrap": "^5.3.1",
+		"chart.js": "^4.3.3",
 		"eventemitter3": "^5.0.1",
 		"fast-xml-parser": "^4.2.7",
 		"katex": "^0.16.8",
