--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/three": "^0.154.0",
 		"bootstrap": "^5.3.1",
 		"chart.js": "^4.3.3",
+		"chartjs-plugin-zoom": "^2.0.1",
 		"eventemitter3": "^5.0.1",
 		"fast-xml-parser": "^4.2.7",
 		"katex": "^0.16.8",
