--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/d3": "^7.4.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
@@ -32,7 +33,7 @@
 		"@types/three": "^0.154.0",
 		"bootstrap": "^5.3.1",
 		"chart.js": "^4.3.3",
-		"chartjs-plugin-zoom": "^2.0.1",
+		"d3": "^7.8.5",
 		"eventemitter3": "^5.0.1",
 		"fast-xml-parser": "^4.2.7",
 		"katex": "^0.16.8",
