--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"type": "module",
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
+		"@types/jquery": "^3.5.18",
 		"@types/katex": "^0.16.2",
 		"@types/lodash": "^4.14.196",
 		"@types/three": "^0.154.0",
@@ -36,6 +37,7 @@
 		"d3": "^7.8.5",
 		"eventemitter3": "^5.0.1",
 		"fast-xml-parser": "^4.2.7",
+		"jquery": "^3.7.1",
 		"katex": "^0.16.8",
 		"lodash": "^4.17.21",
 		"mathjs": "^11.9.1",
