--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@allmaps/transform": "^1.0.0-beta.1",
 		"@popperjs/core": "^2.11.8",
 		"@types/jquery": "^3.5.18",
 		"@types/katex": "^0.16.2",
