--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@allmaps/transform": "^1.0.0-beta.1",
 		"@popperjs/core": "^2.11.8",
+		"@tweenjs/tween.js": "^21.0.0",
 		"@types/jquery": "^3.5.18",
 		"@types/katex": "^0.16.2",
 		"@types/lodash": "^4.14.196",
