--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/d3": "^7.4.0",
+		"@types/fabric": "^5.3.6",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
@@ -38,6 +39,7 @@
 		"chart.js": "^4.3.3",
 		"d3": "^7.8.5",
 		"eventemitter3": "^5.0.1",
+		"fabric": "^5.3.0",
 		"fast-xml-parser": "^4.2.7",
 		"jquery": "^3.7.1",
 		"katex": "^0.16.8",
